--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -43,6 +43,19 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/already_saved"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:layout_toStartOf="@+id/save"
+        android:text="@string/already_downloaded"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="25sp"
+        android:visibility="invisible" />
+
     <Button
         android:id="@+id/save"
         android:layout_width="200dp"
