--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -6,63 +6,15 @@
     android:padding="10dp"
     tools:context="com.example.assistant.workout_assistant.TrainingDetailsActivity">
 
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
+    <LinearLayout android:id="@+id/detailsFragment"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal"/>
 
-        <TextView
-            android:id="@+id/trainingName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:visibility="visible" />
-
-        <ListView
-            android:id="@+id/exerciseBeansList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/already_saved"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"
-        android:layout_toStartOf="@+id/save"
-        android:text="@string/already_downloaded"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="25sp"
-        android:visibility="invisible" />
-
-    <Button
-        android:id="@+id/save"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/downloading_button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+    <LinearLayout android:id="@+id/panelFragment"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"/>
 
 
 
