--- a/app/src/main/res/layout/download_panel_fragment.xml
+++ b/app/src/main/res/layout/download_panel_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context="com.example.assistant.workout_assistant.fragments.DownloadPanelFragment">
+    tools:context="com.example.assistant.workout_assistant.fragments.panels.DownloadPanelFragment">
 
     <TextView
         android:id="@+id/already_saved"
