--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
             android:layout_height="wrap_content"
             android:text="@string/browse_yours_trainings" />
 
+        <Button
+            android:id="@+id/browsePlannedTrain"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/browse_planned_trainings" />
+
     </LinearLayout>
 
 
