--- a/app/src/main/res/layout/activity_plan_training.xml
+++ b/app/src/main/res/layout/activity_plan_training.xml
@@ -24,7 +24,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/chosen_date"
+            android:id="@+id/chosenDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -34,19 +34,19 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/change_date_button"
+            android:id="@+id/changeDateButton"
             android:layout_width="150dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/chosen_date"
+            android:layout_toEndOf="@+id/chosenDate"
             android:text="@string/change_button" />
 
         <TextView
-            android:id="@+id/chosen_time"
+            android:id="@+id/chosenTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/chosen_date"
+            android:layout_below="@+id/chosenDate"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:text="time"
@@ -54,13 +54,13 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/change_time_button"
+            android:id="@+id/changeTimeButton"
             android:layout_width="150dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="25dp"
-            android:layout_below="@+id/change_date_button"
+            android:layout_below="@+id/changeDateButton"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/chosen_time"
+            android:layout_toEndOf="@+id/chosenTime"
             android:text="@string/change_button" />
 
         <Button
