--- a/app/src/main/res/layout/fragment_edit_panel.xml
+++ b/app/src/main/res/layout/fragment_edit_panel.xml
@@ -2,18 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.assistant.workout_assistant.fragments.EditPanelFragment">
+    tools:context="com.example.assistant.workout_assistant.fragments.panels.EditPanelFragment">
 
     <Button
-        android:id="@+id/delete_button"
+        android:id="@+id/deleteTrainingButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/planning_button"
+        android:layout_toStartOf="@+id/planningButton"
         android:text="@string/delete_training" />
 
     <Button
-        android:id="@+id/planning_button"
+        android:id="@+id/planningButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/plan_training"
