--- a/app/src/main/res/layout/fragment_training_details.xml
+++ b/app/src/main/res/layout/fragment_training_details.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textViewError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="invisible" />
+
+    <TextView
         android:id="@+id/trainingName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +25,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/authorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
