--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    tools:context="com.example.assistant.workout_assistant.MainActivity">
+    tools:context="com.example.assistant.workout_assistant.activities.MainActivity">
 
     <LinearLayout
         android:id="@+id/LinearLayout1"
