--- a/app/src/main/res/layout/activity_my_trainings.xml
+++ b/app/src/main/res/layout/activity_my_trainings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.assistant.workout_assistant.MyTrainingsActivity">
+    tools:context="com.example.assistant.workout_assistant.activities.MyTrainingsActivity">
 
     <ListView
         android:id="@+id/myTrainingsList"
