--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    tools:context="com.example.assistant.workout_assistant.TrainingDetailsActivity">
+    tools:context="com.example.assistant.workout_assistant.activities.TrainingDetailsActivity">
 
     <LinearLayout android:id="@+id/detailsFragment"
         android:layout_height="match_parent"
