--- a/app/src/main/res/layout/activity_web_trainings.xml
+++ b/app/src/main/res/layout/activity_web_trainings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.example.assistant.workout_assistant.WebTrainingsActivity">
+    tools:context="com.example.assistant.workout_assistant.activities.WebTrainingsActivity">
 
     <TextView
         android:id="@+id/textView"
