--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.assistant.workout_assistant.activities.LoginActivity">
-
+    tools:context="com.example.assistant.workout_assistant.activities.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,14 +16,29 @@
 
 
         <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:hint="@string/username"
             android:textAlignment="center"
             android:textSize="24sp"
@@ -34,10 +49,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="center"
@@ -60,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="20dp"
-            android:text="@string/sign_in" />
+            android:text="@string/login" />
 
         <Button
             android:id="@+id/register"
@@ -69,7 +84,8 @@
             android:layout_weight="1"
             android:padding="20dp"
             android:paddingBottom="10dp"
-            android:text="@string/registration" />
+            android:text="@string/register" />
     </LinearLayout>
+
 
 </LinearLayout>
