--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.assistant.workout_assistant.activities.LoginActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.assistant.workout_assistant.activities.LoginActivity">
 
 
     <LinearLayout
@@ -44,13 +44,29 @@
     </LinearLayout>
 
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_weight="0"
-        android:padding="20dp"
-        android:onClick="loginAttemp"
-        android:text="@string/login" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_weight="0"
+            android:padding="20dp"
+            android:text="@string/sign_in" />
+
+        <Button
+            android:id="@+id/registration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_weight="0"
+            android:padding="20dp"
+            android:text="@string/registration" />
+    </LinearLayout>
+
 
 </LinearLayout>
