--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:textStyle="bold"
             android:visibility="visible" />
 
+
+        <Button
+            android:id="@+id/login"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_in" />
+
         <Button
             android:id="@+id/browseTrain"
             android:layout_width="200dp"
