--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
             android:text="@string/sign_in" />
 
         <Button
+            android:id="@+id/logout"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/logout" />
+
+        <Button
             android:id="@+id/browseTrain"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
