--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:orientation="vertical"
     tools:context="com.example.assistant.workout_assistant.activities.TrainingDetailsActivity">
 
     <LinearLayout android:id="@+id/detailsFragment"
@@ -18,4 +19,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
