--- a/app/src/main/res/layout/row_with_button.xml
+++ b/app/src/main/res/layout/row_with_button.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <LinearLayout
         android:id="@+id/layoutTaskView"
         android:layout_width="wrap_content"
-        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:padding="15dp" >
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/trainingTime"
@@ -28,13 +29,13 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/LayoutDeleteTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
         android:layout_alignParentEnd="true"
-        android:id="@+id/LayoutDeleteTask"
-        android:clickable="true">
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/deletePlannedButton"
