--- a/app/src/main/res/layout/list_exercise_serie.xml
+++ b/app/src/main/res/layout/list_exercise_serie.xml
@@ -122,6 +122,7 @@
         </LinearLayout>
 
         <CheckBox
+            android:id="@+id/is_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="30dp" />
