--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
+    android:fillViewport="true"
     tools:context="com.example.assistant.workout_assistant.activities.TrainingDetailsActivity">
 
     <!--<ScrollView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="wrap_content">-->
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ScrollView
+            <LinearLayout
                 android:id="@+id/detailsFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -28,8 +29,8 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal" />
 
-        <!--</LinearLayout>-->
+        </LinearLayout>
     <!--</ScrollView>-->
 
 
-</LinearLayout>
+</ScollView>
